--- a/netlify.toml
+++ b/netlify.toml
@@ -9,8 +9,11 @@
   [headers.values]
     Content-Security-Policy = """
       default-src 'self';
+      child-src 'self' blob:;
+      img-src 'self' blob: data:;
+      script-src 'self' 'unsafe-inline';
       """
-    X-Frame-Options = "DENY"
+    X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "no-referrer"
