Another attempt to copy examples

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   ID = "texturemap"
 
 [build]
-  publish = "website"
+  publish = "_site"
   command = "echo 'npm run copy-examples'"
 
 [[headers]]
