Revert back to original netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,7 @@
   ID = "texturemap"
 
 [build]
-  publish = "_site"
-  command = "echo 'npm run copy-examples'"
+  publish = "website"
 
 [[headers]]
   for = "/*"
