--- a/netlify.toml
+++ b/netlify.toml
@@ -7,12 +7,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = """
-      default-src 'self';
-      child-src 'self' blob:;
-      img-src 'self' blob: data:;
-      script-src 'self' 'unsafe-inline';
-      """
+    Content-Security-Policy = """default-src 'self'; child-src 'self' blob:; img-src 'self' blob: data:; script-src 'self' 'unsafe-inline';"""
     X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
